--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "firebase-admin": "^8.7.0",
     "jQuery": "^1.7.4"
   }
 }
